--- a/.gitignore
+++ b/.gitignore
@@ -51,30 +51,26 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
 *.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
 
 # Sphinx documentation
 docs/_build/
+docs/build/
+docs/source/_autosummary/
+docs/source/reference/
+docs/source/_build/
+docs/rendering_times.csv
+#i18n
+docs/i18n/gettext/.doctrees
+docs/i18n/**/*.mo
+docs/i18n/translatable.po
+docs/i18n/untranslatable.po
 
 # PyBuilder
 target/
 
 # Jupyter Notebook
+jupyter/
 .ipynb_checkpoints
 
 # IPython
@@ -94,12 +90,12 @@ ipython_config.py
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
 
+# PyCharm
+/.idea/
+
 # Celery stuff
 celerybeat-schedule
 celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
 
 # Environments
 .env
@@ -110,13 +106,6 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
 # mkdocs documentation
 /site
 
@@ -125,5 +114,20 @@ venv.bak/
 .dmypy.json
 dmypy.json
 
-# Pyre type checker
-.pyre/
+*.pyc
+*.bak
+.DS_Store
+
+.floo
+.flooignore
+.vscode
+.vs
+*.xml
+*.iml
+media
+.eggs/
+build/
+dist/
+
+/media_dir.txt
+# ^TODO: Remove the need for this with a proper config file
